--- a/styles/component6.css
+++ b/styles/component6.css
@@ -209,6 +209,7 @@
 }
 
 #component6 .content>hr {
+    clear: both;
     margin: 0px;
     border: 1px solid #E6E6E6;
     width: 100%;
